# pulumi-operator

./: Cargo.toml
.github/workflows/: release.yml
pulumi-cli/: Cargo.toml
pulumi-cli/src/: lib.rs
pulumi-operator/: Cargo.toml
pulumi-operator-base/: Cargo.toml
pulumi-operator-base/src/: lib.rs
pulumi-operator-base/src/stack/: cached_pulumi_stack.rs  controller.rs  controller_strategy.rs  event.rs  mod.rs  pulumi_stack_change.rs  pulumi_stack_controller.rs  pulumi_stack_controller_strategy.rs  pulumi_stack_service.rs  service.rs
pulumi-operator-kubernetes/: Cargo.toml  Dockerfile
pulumi-operator-kubernetes-job/: Cargo.toml  Dockerfile
pulumi-operator-kubernetes-job/src/: fetch_service.rs  main.rs  pulumi_execution.rs
pulumi-operator-kubernetes-job/src/git/: service.rs
pulumi-operator-kubernetes-job/src/oci/: service.rs
pulumi-operator-kubernetes/src/: config_provider.rs  lib.rs  main.rs
pulumi-operator-kubernetes/src/kubernetes/: client_provider.rs  crd_installer.rs  kubernetes_service.rs  mod.rs  service.rs
pulumi-operator-kubernetes/src/stack/: controller.rs  controller_strategy.rs  crd.rs  event.rs  kubernetes_pulumi_stack_controller_strategy.rs  kubernetes_pulumi_stack_service.rs  mod.rs  pulumi_stack_auth_crd.rs  pulumi_stack_auth_repository.rs  pulumi_stack_cluster_auth.rs  pulumi_stack_cluster_source_crd.rs  pulumi_stack_crd.rs  pulumi_stack_crd_installer.rs  pulumi_stack_inner_auth.rs  pulumi_stack_source_crd.rs  pulumi_stack_source_repository.rs  service.rs  status.rs
pulumi-operator-kubernetes/src/stack/auth/: cluster_crd.rs  crd.rs  inner.rs  mod.rs  repository.rs
pulumi-operator-kubernetes/src/stack/source/: cluster_crd.rs  crd.rs  inner.rs  mod.rs  repository.rs
pulumi-operator-kubernetes/src/stack/source/git/: cluster_crd.rs  crd.rs  inner.rs  repository.rs
pulumi-operator-kubernetes/src/stack/source/oci/: cluster_crd.rs  crd.rs  inner.rs  repository.rs
pulumi-operator/src/: main.rs
