[package]
name = "pulumi-operator-base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.100"
serde = "1.0.171"
serde_yaml = "0.9.22"
schemars = "0.8.12"
springtime = { version = "1.0.0", features = ["tokio", "threadsafe"] }
springtime-di = "1.0.0"
async-trait = "0.1.71"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }

[features]
boot = []
default = ["boot"]