[package]
name = "pulumi-operator-kubernetes-job"
version = "0.1.0"
edition = "2021"

[dependencies]
springtime-di = "1.0.0"
springtime = { version = "1.0.0", features = ["tokio", "threadsafe"] }
async-trait = "0.1.71"
tokio = { version = "1.29.1", features = ["full"] }
pulumi-cli = { path = "../pulumi-cli" }
thiserror = "1.0.43"
serde = "1.0.171"
schemars = "0.8.12"
serde_json = "1.0.100"
log = "0.4.19"
futures = "0.3.28"
tracing = "0.1.37"
pulumi-operator-kubernetes = { path = "../pulumi-operator-kubernetes", default-features = false}
pulumi-operator-base = { path = "../pulumi-operator-base" }
k8s-openapi = { version = "0.19.0", features = ["v1_26"] }
kube = { version = "0.85.0", features = ["runtime", "derive", "admission"] }
git2 = "0.17.2"
